kubernetes/production/apps/dotbot/dotbot/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotbot
  labels:
    app: dotbot
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.sillock.co.uk"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.sillock.co.uk/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
    - host: dotbot-api.sillock.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotbot
                port:
                  name: http
  tls:
    - hosts:
        - dotbot-api.sillock.co.uk
      secretName: dotbot-tls-certificate
